# python-project-50

./: README.md  pyproject.toml
.github/workflows/: README.md  main.yml
gendiff/: cli.py
gendiff/formaters/: __init__.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
