[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "\"Show difference between two data files\""
authors = ["Oleg14U <hohleghek@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10.12"
PyYAML = "^6.0"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.2.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
